# Competitive-Programming

./: CMakeLists.txt  README.md  a.out  hello.cpp  problem-List.txt  rocket.cpp  sync.cpp  test.cpp
Advent of Code/2015/: Day 5 - Doesn't He Have Intern-Elves For Thisa.cpp
CSES Problem Set/: README.md
CSES Problem Set/ Introductory Problems/: Increasing Array.cpp  Missing Number.cpp  Permutations.cpp  Repetitions.cpp  Weird Algorithm.cpp  a.out
CodeChef/April 2021 Long Challenge/: a.cpp  a.out  b.cpp  c.cpp  d.cpp  j.cpp
Codeforces/: README.md
Codeforces/April Fools Day Contest 2021/: Cakewalk.cpp  DMCA.cpp  Encoded message.cpp  Fibonacci Words.cpp  Is it rated - 2.cpp  L BREAK into program.cpp  Math.cpp  Xenolith? Hippodrome?.cpp  a.out
Codeforces/EDU/: PizzaForces.cpp
Coding Notes/: README.md.tmp.html  linked-list.md.tmp.html  searching.md.tmp.html
EPI/: Compute Salary Threshold.cpp  Explicit Comparator.cpp  Intervals.cpp  Partitioning and Sorting Array.cpp  SmallestNonconstructibleValue.cpp  Team Photo.cpp  a.out  comparators.cpp  quick_sort.cpp  semaphore.cpp  templates.cpp
Graph/: a.out  bfs.cpp
ITMO/Binary Search/: test.cpp
Kattis/: Autori.cpp  Bijele.cpp  Cold-puter Science.cpp  Electrical Outlets  Electrical Outlets.cpp  Faktor.cpp  FizzBuzz.cpp  Greetings.cpp  Missing Numbers.cpp  Pet.cpp  Quality-Adjusted-Life-Year.cpp  README.md  Speed Limit.cpp  Stuck In A Time Loop.cpp  a.out  hello.cpp  jackolanternjuxtaposition.cpp  test.cpp
LeetCode/: README.md
LeetCode/DP/: 0-1-KnapSack.cpp  01 KnapSack.cpp  Coin Changing.cpp  Diff Between Two Strings.cpp  Longest Common Subsequence.cpp  LongestCommonSubsequence.cpp  Matrix Chain Multiplication.cpp  Maximum Sub Square Matrix.cpp  Median of Two Sorted Arrays.cpp  Minimum Edit Distance.cpp  Sum of Subsets.cpp  Word Break.cpp  a.out  staircase.cc  sumOfSubsets.cpp
LeetCode/Easy/:  Find N Unique Integers Sum up to Zero.cpp  2sum.cpp  Add Binary.cpp  Add Digits.cpp  Add Strings.cpp  Add_to_Array-Form_of_Int.cpp  Armstrong Number.cpp  Assign Cookies.cpp  Average of Levels in Binary Tree.cpp  Backspace String Compare.cpp  Balanced Binary Tree.cpp  Base 7.cpp  Binary Number with Alternating Bits.cpp  Binary Tree Inorder Traversal.cpp  Binary Tree Postorder Traversal.cpp  Binary Tree Preorder Traversal.cpp  Binary Watch.cpp  Can Place Flowers.cpp  Check If It Is a Straight Line.cpp  Check If a Number Is Majority Element in a Sorted Array.cpp  Check if Array Is Sorted and Rotated.cpp  Check if Binary String Has at Most One Segment of Ones.cpp  Check if Numbers Are Ascending in a Sentence.cpp  Check if the Sentence Is Pangram.cpp  Climbing Stairs.cpp  Closest Binary Search Tree Value.cpp  Confusing Number.cpp  Consecutive Characters.cpp  Construct String from Binary Tree.cpp  Contains Duplicate II.cpp  Convert 1D Array Into 2D Array.cpp  Convert Sorted Array to Binary Search Tree.cpp  Count Binary Substrings  Solution.cpp  Count Items Matching a Rule.cpp  Count Negative Numbers in a Sorted Matrix.cpp  Count Primes.cpp  Cousins in Binary Tree.cpp  Create Target Array in the Given Order.cpp  Decompress Run-Length Encoded List.cpp  Degree of an Array.cpp  (+175 more)
LeetCode/Hard/: #LFU_cache.cpp#  24 Game.cpp  Basic Calculator III.cpp  Basic Calculator.cpp  Best Time to Buy and Sell Stock III.cpp  Best Time to Buy and Sell Stock IV.cpp  Binary Tree Maximum Path Sum.cpp  Burst Balloons.cpp  Bus Routes.cpp  Closest Subsequence Sum.cpp  Construct Target Array With Multiple Sums.cpp  Count of Smaller Numbers After Self.cpp  Course Schedule III.cpp  Critical Connections in a Network.cpp  Design In-Memory File System.cpp  Design Search Autocomplete System.cpp  Dinner Plate Stacks.cpp  Employee Free Time.cpp  Find Median from Data Stream.cpp  Find Minimum in Rotated Sorted Array II.cpp  Find XOR Sum of All Pairs Bitwise AND.cpp  Finding MK Average.cpp  First_Missing_positive.cpp  Guess the Word.cpp  Integer to English Words.cpp  Jump_Game2.cpp  LFU_cache.cpp  Largest Rectangle in Histogram.cpp  Longest Increasing Path in a Matrix.cpp  Longest Valid Parentheses.cc  Longest Valid Parentheses.cpp  Making A Large Island.cpp  Max Chunks To Make Sorted II.cpp  Maximal Rectangle.cpp  Maximize Palindrome Length From Subsequences.cpp  Maximum Frequency Stack.cpp  Maximum Number of Ways to Partition an Array.cpp  Maximum Vacation Days.cpp  Minimum Moves to Move a Box to Their Target Location.cpp  Minimum Number of Days to Eat N Oranges.cpp  (+37 more)
LeetCode/Medium/:  Find Minimum in Rotated Sorted Array.cpp   Longest Word in Dictionary through Deleting.cpp   Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold.cpp   Populating Next Right Pointers in Each Node II.cpp   Sort Colors.cpp  01 Matrix.cpp  132_pattern.cpp  3Sum Smaller.cpp  3Sum With Multiplicity.cpp  3Sum_Closest.cpp  3sum.cpp  4Sum.cpp  4Sum_2.cpp  Accounts Merge.cpp  Add Minimum Number of Rungs.cpp  Add One Row to Tree.cpp  Add Two Polynomials Represented as Linked Lists.cpp  Advantage Shuffle.cpp  Angle Between Hands of a Clock.cpp  Arithmetic Slices.cpp  Array Nesting.cpp  Array With Elements Not Equal to Average of Neighbors.cc  Asteroid Collision.cpp  Balance a Binary Search Tree.cpp  Basic Calculator II.cpp  Beautiful Arrangement II.cpp  Best Time to Buy and Sell Stock with Transaction Fee.cpp  Binary Search Tree Iterator II.cpp  Binary Search Tree Iterator.cpp  Binary Search Tree to Greater Sum Tree.cpp  Binary Tree Level Order Traversal II.cpp  Binary Tree Longest Consecutive Sequence.cpp  Binary Tree Vertical Order Traversal.cpp  Binary Tree Zigzag Level Order Traversal.cpp  Boats to Save People.cpp  Boundary of Binary Tree.cpp  Break a Palindrome.cpp  Broken Calculator.cpp  Buildings With an Ocean View.cc  Bulb Switcher.cpp  (+354 more)
OOD/: Deck_of_cards.cpp  a.out  inheritence.cpp
OS/: IO  IO.c  cpu  cpu.c  exec  exec.c  fork  fork.c  mem  mem.c  p4.output  p4.txt  sync.cpp  thread  thread.c  thread.cc
Ref/: graph_traversal.cpp  graphs_demo.cpp  template.cpp
Ref/Sorting/: a.out  bubble_sort.cpp  bucket_sort.cpp  counting_sort.cpp  heap_sort.cpp  (+3 more)
(+502 files in other folders)
