cmake_minimum_required(VERSION 3.20)
project(CP)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)
include_directories("CTCI/Ch 3 - Stacks and Queues/1-ThreeInOne.cpp")
include_directories(OS)

add_executable(CP
        "Advent of Code/2020/Day 1: Report Repair/a.cpp"
        "Advent of Code/2020/Day 1: Report Repair/b.cpp"
        "Advent of Code/2020/Day 2: Password Philosophy/a.cpp"
        "Algo Master/data/dsu.cpp"
        "Algo Master/data/fenwick.cpp"
        "Algo Master/data/fenwick2d.cpp"
        "Algo Master/data/segtree.cpp"
        "Algo Master/data/sparsetable.cpp"
        "Algo Master/flows/blossom.cpp"
        "Algo Master/flows/dinic-edge-ids.cpp"
        "Algo Master/flows/dinic-old.cpp"
        "Algo Master/flows/dinic.cpp"
        "Algo Master/flows/fastflow-other.cpp"
        "Algo Master/flows/fastflow.cpp"
        "Algo Master/flows/flow_decomposition.cpp"
        "Algo Master/flows/flow_graph.cpp"
        "Algo Master/flows/gomory_hu-old.cpp"
        "Algo Master/flows/gomory_hu.cpp"
        "Algo Master/flows/hungarian-arrays.cpp"
        "Algo Master/flows/hungarian.cpp"
        "Algo Master/flows/matching.cpp"
        "Algo Master/flows/mcmf.cpp"
        "Algo Master/graph/bicone.cpp"
        "Algo Master/graph/biconv.cpp"
        "Algo Master/graph/bridges.cpp"
        "Algo Master/graph/cutpoints.cpp"
        "Algo Master/graph/cycles.cpp"
        "Algo Master/graph/dfs_digraph_useless.cpp"
        "Algo Master/graph/dfs_forest.cpp"
        "Algo Master/graph/dfs_undigraph.cpp"
        "Algo Master/graph/digraph.cpp"
        "Algo Master/graph/dijkstra-set.cpp"
        "Algo Master/graph/dijkstra.cpp"
        "Algo Master/graph/dominators.cpp"
        "Algo Master/graph/eulerian.cpp"
        "Algo Master/graph/forest.cpp"
        "Algo Master/graph/graph.cpp"
        "Algo Master/graph/hld_forest.cpp"
        "Algo Master/graph/lca_forest.cpp"
        "Algo Master/graph/mst.cpp"
        "Algo Master/graph/scc.cpp"
        "Algo Master/graph/topsort.cpp"
        "Algo Master/graph/twosat.cpp"
        "Algo Master/graph/undigraph.cpp"
        "Algo Master/misc/debug.cpp"
        "Algo Master/misc/lis.cpp"
        "Algo Master/numeric/bm.cpp"
        "Algo Master/numeric/extgcd.cpp"
        "Algo Master/numeric/factorizer.cpp"
        "Algo Master/numeric/fft.cpp"
        "Algo Master/numeric/fwht.cpp"
        "Algo Master/numeric/md.cpp"
        "Algo Master/numeric/mint.cpp"
        "Algo Master/numeric/ntt.cpp"
        "Algo Master/numeric/poly.cpp"
        "Algo Master/numeric/primitive.cpp"
        "Algo Master/string/duval.cpp"
        "Algo Master/string/duval_prefixes.cpp"
        "Algo Master/string/kmp.cpp"
        "Algo Master/string/manacher.cpp"
        "Algo Master/string/suffix_array.cpp"
        "Algo Master/string/z.cpp"
        "Contests/Codeforces/Educational Round-112/a 2.cc"
        "Contests/Codeforces/Educational Round-112/a.cc"
        "Contests/Codeforces/Educational Round-112/b 2.cc"
        "Contests/Codeforces/Educational Round-112/b.cc"
        "Contests/Codeforces/Educational Round-112/c.cc"
        "Contests/Codeforces/Educational Round-112/d.cc"
        "Contests/Codeforces/Educational Round-112/e 2.cc"
        "Contests/Codeforces/Educational Round-112/e.cc"
        "Contests/Codeforces/Educational Round-112/f.cc"
        "Contests/Codeforces/Educational Round-113/a.cpp"
        "Contests/Codeforces/Educational Round-113/b.cpp"
        "Contests/Codeforces/Educational Round-113/c.cpp"
        "Contests/Codeforces/Educational Round-113/d.cpp"
        "Contests/Codeforces/Educational Round-113/e.cpp"
        "Contests/Codeforces/Educational Round-113/f.cpp"
        "Contests/Codeforces/Educational Round-113/g.cpp"
        "Contests/Codeforces/Global Round-16/a.cpp"
        "Contests/Codeforces/Global Round-16/b.cpp"
        "Contests/Codeforces/Global Round-16/c.cpp"
        "Contests/Codeforces/Global Round-16/d1.cpp"
        "Contests/Codeforces/Global Round-16/d2.cpp"
        "Contests/Codeforces/Global Round-16/e.cpp"
        "Contests/Codeforces/Global Round-16/f.cpp"
        "Contests/Codeforces/Global Round-16/g.cpp"
        "Contests/Codeforces/Global Round-16/h.cpp"
        "Contests/Codeforces/Problems/New Year and Hurry 2.cc"
        "Contests/Codeforces/Problems/New Year and Hurry.cc"
        "Contests/Codeforces/Problems/Next Round.cc"
        "Contests/Codeforces/Problems/Team  2.cc"
        "Contests/Codeforces/Problems/Team .cc"
        "Contests/Codeforces/Problems/Watermelon 2.cc"
        Contests/Codeforces/Problems/Watermelon.cc
        "Contests/Codeforces/Problems/Way Too Long Words.cc"
        "Contests/Facebook Hacker Cup/2021/a 2.cc"
        "Contests/Facebook Hacker Cup/2021/a.cc"
        "Contests/Facebook Hacker Cup/2021/b.cc"
        "Contests/Facebook Hacker Cup/2021/c 2.cc"
        "Contests/Facebook Hacker Cup/2021/c.cc"
        "Contests/Facebook Hacker Cup/2021/d 2.cc"
        "Contests/Facebook Hacker Cup/2021/d.cc"
        "Contests/Facebook Hacker Cup/2021/e 2.cc"
        "Contests/Facebook Hacker Cup/2021/e.cc"
        "Contests/Google/Code Jam/2021/reversort.cpp"
        "Contests/Google/Code Jam IO/2020/Interleved Output 2.cpp"
        "Contests/Google/Code Jam IO/2020/Interleved Output.cpp"
        "Contests/Google/Code Jam IO/2021/Impartial Offerings 2.cpp"
        "Contests/Google/Code Jam IO/2021/Impartial Offerings.cpp"
        "Contests/Google/Code Jam IO/2021/Inconstant Ordering.cpp"
        "Contests/Google/Code Jam IO/2021/Introductions Organization 2.cpp"
        "Contests/Google/Code Jam IO/2021/Introductions Organization.cpp"
        "Contests/Google/Kickstart/2020/Round A/allocation 2.cpp"
        "Contests/Google/Kickstart/2020/Round A/allocation.cpp"
        "Contests/Google/Kickstart/2020/Round A/plates 2.cpp"
        "Contests/Google/Kickstart/2020/Round A/plates.cpp"
        "Contests/Google/Kickstart/2020/Round A/workout 2.cpp"
        "Contests/Google/Kickstart/2020/Round A/workout.cpp"
        "Contests/Google/Kickstart/2021/Round A/K-Goodness-String 2.cc"
        "Contests/Google/Kickstart/2021/Round A/K-Goodness-String.cc"
        "Contests/Google/Kickstart/2021/Round A/L-Shaped-Plots 2.cc"
        "Contests/Google/Kickstart/2021/Round A/L-Shaped-Plots.cc"
        "Contests/Google/Kickstart/2021/Round A/Rabbit House 2.cc"
        "Contests/Google/Kickstart/2021/Round A/Rabbit House.cc"
        "Contests/Google/Kickstart/2021/Round B/a 2.cpp"
        "Contests/Google/Kickstart/2021/Round B/a.cpp"
        "Contests/Google/Kickstart/2021/Round B/b 2.cpp"
        "Contests/Google/Kickstart/2021/Round B/b.cpp"
        "Contests/Google/Kickstart/2021/Round B/c 2.cpp"
        "Contests/Google/Kickstart/2021/Round B/c.cpp"
        "Contests/Google/Kickstart/2021/Round B/d 2.cpp"
        "Contests/Google/Kickstart/2021/Round B/d.cpp"
        "Contests/Google/Kickstart/2021/Round E/shuffled_anagrams 2.cc"
        "Contests/Google/Kickstart/2021/Round E/shuffled_anagrams.cc"
        Contests/template.cc
        "CP Master/bignum_fft/bignum_fft.cc"
        "CP Master/bignum_fft/ntt.cc"
        "CP Master/flow/assignment_problem_flow.cc"
        "CP Master/flow/dinic.cc"
        "CP Master/flow/dinic_matching.cc"
        "CP Master/flow/min_cost_flow.cc"
        "CP Master/geometry/dp_hull.cc"
        "CP Master/geometry/monotonic_dp_hull_deque.cc"
        "CP Master/graph_theory/biconnected_components.cc"
        "CP Master/graph_theory/bridges.cc"
        "CP Master/heavy_light/subtree_heavy_light.cc"
        "CP Master/io/io.cc"
        "CP Master/mod/choose.cc"
        "CP Master/mod/mod_int.cc"
        "CP Master/mod/mod_int_simple.cc"
        "CP Master/rmq_lca/rmq_lca.cc"
        "CP Master/seg_tree/basic_seg_tree.cc"
        "CP Master/seg_tree/fenwick_tree.cc"
        "CP Master/seg_tree/seg_tree.cc"
        "CP Master/union_find/kruskal.cc"
        "CP Master/union_find/union_find_size.cc"
        "CSES Problem Set/ Introductory Problems/Increasing Array.cpp"
        "CSES Problem Set/ Introductory Problems/Missing Number.cpp"
        "CSES Problem Set/ Introductory Problems/Permutations.cpp"
        "CSES Problem Set/ Introductory Problems/Repetitions.cpp"
        "CSES Problem Set/ Introductory Problems/Weird Algorithm.cpp"
        "CTCI/Ch 1 - Arrays and Strings/1-IsUnique.cpp"
        "CTCI/Ch 1 - Arrays and Strings/2-checkPermutations.cpp"
        "CTCI/Ch 1 - Arrays and Strings/3-URLify.cpp"
        "CTCI/Ch 1 - Arrays and Strings/4-palindromePerm.cpp"
        "CTCI/Ch 1 - Arrays and Strings/5-oneAway.cpp"
        "CTCI/Ch 1 - Arrays and Strings/6-stringCompress.cpp"
        "CTCI/Ch 1 - Arrays and Strings/7-rotateMatrix.cpp"
        "CTCI/Ch 1 - Arrays and Strings/8-zeroMatrix.cpp"
        "CTCI/Ch 1 - Arrays and Strings/9-stringRotation.cpp"
        "CTCI/Ch 1 - Arrays and Strings/Hash Table Separate Chaining.cc"
        "CTCI/Ch 10: Sorting and Searching/10.1 - SortedMerge.cpp"
        "CTCI/Ch 10: Sorting and Searching/10.2 - GroupAnagrams.cpp"
        "CTCI/Ch 10: Sorting and Searching/10.3 - Search in Rotated Array.cpp"
        "CTCI/Ch 10: Sorting and Searching/10.4 - Sorted Search No Size.cpp"
        "CTCI/Ch 10: Sorting and Searching/10.5 - Sparse Search.cpp"
        "CTCI/Ch 10: Sorting and Searching/BinarySearch.cpp"
        "CTCI/Ch 10: Sorting and Searching/BubbleSort.cpp"
        "CTCI/Ch 10: Sorting and Searching/BucketSort.cpp"
        "CTCI/Ch 10: Sorting and Searching/MergeSort.cpp"
        "CTCI/Ch 10: Sorting and Searching/QuickSort.cpp"
        "CTCI/Ch 10: Sorting and Searching/SelectionSort.cpp"
        "CTCI/Ch 2 - Linked Lists/0-ll.cpp"
        "CTCI/Ch 2 - Linked Lists/1-RemoveDuplicates.cpp"
        "CTCI/Ch 2 - Linked Lists/2-Return_Kth_to_Last.cpp"
        "CTCI/Ch 2 - Linked Lists/3-Delete Middle Node.cpp"
        "CTCI/Ch 2 - Linked Lists/4-partition.cpp"
        "CTCI/Ch 2 - Linked Lists/5-sumLists.cpp"
        "CTCI/Ch 2 - Linked Lists/6-palindrome.cpp"
        "CTCI/Ch 2 - Linked Lists/7-intersection.cpp"
        "CTCI/Ch 2 - Linked Lists/8-loopDetection.cpp"
        "CTCI/Ch 3 - Stacks and Queues/1-ThreeInOne.cpp/0-queue.cpp"
        "CTCI/Ch 3 - Stacks and Queues/1-ThreeInOne.cpp/0-stack.cpp"
        "CTCI/Ch 3 - Stacks and Queues/1-ThreeInOne.cpp/FixedMultiStack.cpp"
        "CTCI/Ch 3 - Stacks and Queues/1-ThreeInOne.cpp/FixedMultiStack.h"
        "CTCI/Ch 3 - Stacks and Queues/0-Queue.cpp"
        "CTCI/Ch 3 - Stacks and Queues/0-Stack.cpp"
        "CTCI/Ch 3 - Stacks and Queues/2-minStack.cpp"
        "CTCI/Ch 3 - Stacks and Queues/3-Stack of Plates.cpp"
        "CTCI/Ch 3 - Stacks and Queues/4-Queue via Stacks.cpp"
        "CTCI/Ch 3 - Stacks and Queues/5-Sort Stack.cpp"
        "CTCI/Ch 3 - Stacks and Queues/6-Animal Shelter.cpp"
        "CTCI/Ch 4 - Trees and Graphs/1-Route Between Nodes.cc"
        "CTCI/Ch 4 - Trees and Graphs/10-Check Subtree.cc"
        "CTCI/Ch 4 - Trees and Graphs/11-Random Node.cc"
        "CTCI/Ch 4 - Trees and Graphs/12-Paths with Sum.cc"
        "CTCI/Ch 4 - Trees and Graphs/2-Minimal Tree.cc"
        "CTCI/Ch 4 - Trees and Graphs/3-List Of Depths.cc"
        "CTCI/Ch 4 - Trees and Graphs/4-Check Balanced.cc"
        "CTCI/Ch 4 - Trees and Graphs/5-Validate BST.cc"
        "CTCI/Ch 4 - Trees and Graphs/6-Successor.cc"
        "CTCI/Ch 4 - Trees and Graphs/7-Build Order.cc"
        "CTCI/Ch 4 - Trees and Graphs/8-First Common Ancestor.cc"
        "CTCI/Ch 4 - Trees and Graphs/9-BST Sequences.cc"
        EPI/comparators.cpp
        "EPI/Compute Salary Threshold.cpp"
        "EPI/Explicit Comparator.cpp"
        EPI/Intervals.cpp
        EPI/KMP.cpp
        "EPI/Partitioning and Sorting Array.cpp"
        EPI/quick_sort.cpp
        EPI/semaphore.cpp
        "EPI/Team Photo.cpp"
        EPI/templates.cpp
        "LeetCode/DP/01 KnapSack.cpp"
        "LeetCode/DP/Coin Changing.cpp"
        "LeetCode/DP/Longest Common Subsequence.cpp"
        "LeetCode/DP/Matrix Chain Multiplication.cpp"
        "LeetCode/DP/Maximum Sub Square Matrix.cpp"
        "LeetCode/DP/Median of Two Sorted Arrays.cpp"
        "LeetCode/DP/Minimum Edit Distance.cpp"
        LeetCode/DP/staircase.cc
        "LeetCode/DP/Sum of Subsets.cpp"
        "LeetCode/DP/Word Break.cpp"
        "LeetCode/Easy/ Find N Unique Integers Sum up to Zero.cpp"
        "LeetCode/Easy/Add Binary.cpp"
        "LeetCode/Easy/Add Digits.cpp"
        "LeetCode/Easy/Add Strings.cpp"
        LeetCode/Easy/Add_to_Array-Form_of_Int.cpp
        "LeetCode/Easy/Assign Cookies.cpp"
        "LeetCode/Easy/Average of Levels in Binary Tree.cpp"
        "LeetCode/Easy/Backspace String Compare.cpp"
        "LeetCode/Easy/Balanced Binary Tree.cpp"
        "LeetCode/Easy/Base 7.cpp"
        LeetCode/Easy/best_time_to_buy_and_sell_stock2.cpp
        LeetCode/Easy/best_time_to_buy_sell_stock1.cpp
        "LeetCode/Easy/Binary Number with Alternating Bits.cpp"
        "LeetCode/Easy/Binary Tree Inorder Traversal.cpp"
        "LeetCode/Easy/Binary Tree Postorder Traversal.cpp"
        "LeetCode/Easy/Binary Tree Preorder Traversal.cpp"
        "LeetCode/Easy/Binary Watch.cpp"
        "LeetCode/Easy/Can Place Flowers.cpp"
        "LeetCode/Easy/Check If a Number Is Majority Element in a Sorted Array.cpp"
        "LeetCode/Easy/Check if Array Is Sorted and Rotated.cpp"
        "LeetCode/Easy/Check if Binary String Has at Most One Segment of Ones.cpp"
        "LeetCode/Easy/Check If It Is a Straight Line.cpp"
        "LeetCode/Easy/Check if the Sentence Is Pangram.cpp"
        LeetCode/Easy/check_array_formation_through_concat.cpp
        LeetCode/Easy/check_if_a_straight_line.cpp
        "LeetCode/Easy/Climbing Stairs.cpp"
        "LeetCode/Easy/Closest Binary Search Tree Value.cpp"
        "LeetCode/Easy/Confusing Number.cpp"
        "LeetCode/Easy/Consecutive Characters.cpp"
        "LeetCode/Easy/Construct String from Binary Tree.cpp"
        "LeetCode/Easy/Contains Duplicate II.cpp"
        "LeetCode/Easy/Convert 1D Array Into 2D Array.cpp"
        "LeetCode/Easy/Convert Sorted Array to Binary Search Tree.cpp"
        "LeetCode/Easy/Count Binary Substrings  Solution.cpp"
        "LeetCode/Easy/Count Items Matching a Rule.cpp"
        "LeetCode/Easy/Count Negative Numbers in a Sorted Matrix.cpp"
        "LeetCode/Easy/Count Primes.cpp"
        "LeetCode/Easy/Cousins in Binary Tree.cpp"
        "LeetCode/Easy/Create Target Array in the Given Order.cpp"
        "LeetCode/Easy/Decompress Run-Length Encoded List.cpp"
        "LeetCode/Easy/Degree of an Array.cpp"
        "LeetCode/Easy/Delete N Nodes After M Nodes of a Linked List.cpp"
        "LeetCode/Easy/Design Compressed String Iterator.cpp"
        "LeetCode/Easy/Design HashMap.cpp"
        "LeetCode/Easy/Design Hashset.cpp"
        "LeetCode/Easy/Determine if String Halves Are Alike.cpp"
        "LeetCode/Easy/Determine Whether Matrix Can Be Obtained By Rotation.cpp"
        "LeetCode/Easy/Diameter of Binary Tree.cpp"
        "LeetCode/Easy/Distribute Candies.cpp"
        "LeetCode/Easy/Employee Importance.cpp"
        "LeetCode/Easy/Excel Sheet Column Number.cpp"
        "LeetCode/Easy/Excel Sheet Column Title.cpp"
        "LeetCode/Easy/Factorial Trailing Zeroes.cpp"
        "LeetCode/Easy/Fibonacci Number.cpp"
        "LeetCode/Easy/Find All Numbers Disappeared in an Array.cpp"
        "LeetCode/Easy/Find All The Lonely Nodes.cpp"
        "LeetCode/Easy/Find Nearest Point That Has the Same X or Y Coordinate.cpp"
        "LeetCode/Easy/Find Pivot Index.cpp"
        "LeetCode/Easy/Find Smallest Letter Greater Than Target.cpp"
        "LeetCode/Easy/Find the Difference.cpp"
        "LeetCode/Easy/Find the Town Judge.cpp"
        "LeetCode/Easy/Find Winner on a Tic Tac Toe Game.cpp"
        "LeetCode/Easy/Find Words That Can Be Formed by Characters.cpp"
        LeetCode/Easy/first_bad_version.cpp
        LeetCode/Easy/first_unique_character_in_a_string.cpp
        "LeetCode/Easy/Flipping an Image.cpp"
        "LeetCode/Easy/Flood Fill.cpp"
        "LeetCode/Easy/Guess Number Higher or Lower.cpp"
        "LeetCode/Easy/Hamming Distance.cpp"
        LeetCode/Easy/happy_number.cpp
        "LeetCode/Easy/How Many Apples Can You Put into the Basket.cpp"
        "LeetCode/Easy/How Many Numbers Are Smaller Than the Current Number.cpp"
        "LeetCode/Easy/Implement Queue using Stacks.cpp"
        "LeetCode/Easy/Implement Stack using Queues.cpp"
        "LeetCode/Easy/implement_Str().cpp"
        "LeetCode/Easy/Index Pairs of a String.cpp"
        "LeetCode/Easy/Intersection of Three Sorted Arrays.cpp"
        "LeetCode/Easy/Intersection of Two Arrays II.cpp"
        "LeetCode/Easy/Intersection of Two Linked Lists.cc"
        "LeetCode/Easy/Invert Binary Tree.cpp"
        "LeetCode/Easy/Island Perimeter.cpp"
        "LeetCode/Easy/Kids With the Greatest Number of Candies.cpp"
        "LeetCode/Easy/Kth Largest Element in a Stream.cpp"
        LeetCode/Easy/kth_missing_positive_numb.cpp
        LeetCode/Easy/length_of_last_word.cpp
        "LeetCode/Easy/Logger Rate Limiter.cpp"
        "LeetCode/Easy/Longest Common Prefix.cpp"
        "LeetCode/Easy/Longest Harmonious Subsequence.cpp"
        "LeetCode/Easy/Longest Word in Dictionary.cpp"
        LeetCode/Easy/majority_ele.cpp
        "LeetCode/Easy/Max Stack.cpp"
        LeetCode/Easy/max_score_after_splitting_a_string.cpp
        "LeetCode/Easy/Maximum Ascending Subarray Sum.cpp"
        "LeetCode/Easy/Maximum Depth of Binary Tree.cpp"
        "LeetCode/Easy/Maximum Depth of N-ary Tree.cpp"
        "LeetCode/Easy/Maximum Number of Words You Can Type.cpp"
        "LeetCode/Easy/Maximum Product of Three Numbers.cpp"
        "LeetCode/Easy/Maximum Units on a Truck.cpp"
        "LeetCode/Easy/Meeting Rooms.cpp"
        "LeetCode/Easy/Merge Sorted Array.cpp"
        "LeetCode/Easy/Merge Strings Alternately.cpp"
        "LeetCode/Easy/Merge Two Binary Trees.cpp"
        LeetCode/Easy/merge_2_sorted_lists.cpp
        "LeetCode/Easy/Middle of the Linked List.cpp"
        "LeetCode/Easy/Min Cost Climbing Stairs.cpp"
        LeetCode/Easy/min_stck.cpp
        "LeetCode/Easy/Minimum Changes To Make Alternating Binary String.cpp"
        "LeetCode/Easy/Minimum Cost to Move Chips to The Same Position.cpp"
        "LeetCode/Easy/Minimum Depth of Binary Tree.cpp"
        "LeetCode/Easy/Minimum Difference Between Highest and Lowest of K Scores.cc"
        "LeetCode/Easy/Minimum Index Sum of Two Lists.cpp"
        "LeetCode/Easy/Minimum Moves to Convert String.cpp"
        "LeetCode/Easy/Missing Number In Arithmetic Progression.cpp"
        "LeetCode/Easy/Missing Number.cpp"
        "LeetCode/Easy/Missing Ranges.cpp"
        "LeetCode/Easy/Most Common Word.cpp"
        LeetCode/Easy/move_zeroes.cpp
        LeetCode/Easy/moving_avg_from_data_stream.cpp
        "LeetCode/Easy/N-ary Tree Postorder Traversal.cpp"
        "LeetCode/Easy/N-ary Tree Preorder Traversal.cpp"
        "LeetCode/Easy/N-th Tribonacci Number.cpp"
        "LeetCode/Easy/Next Greater Element I.cpp"
        "LeetCode/Easy/Number of 1 Bits.cpp"
        "LeetCode/Easy/Number of Different Integers in a String.cpp"
        "LeetCode/Easy/Number of Steps to Reduce a Number to Zero.cpp"
        "LeetCode/Easy/Number of Strings That Appear as Substrings in Word.cc"
        LeetCode/Easy/number_complement.cpp
        "LeetCode/Easy/Palindrome Linked List.cpp"
        "LeetCode/Easy/Palindrome Number.cpp"
        LeetCode/Easy/palindrome_permutation.cpp
        "LeetCode/Easy/Pascal's Triangle.cpp"
        "LeetCode/Easy/Path Sum.cpp"
        "LeetCode/Easy/Plus One.cpp"
        "LeetCode/Easy/Power of Four.cpp"
        "LeetCode/Easy/Power of Three.cpp"
        LeetCode/Easy/power_of_two.cpp
        "LeetCode/Easy/Range Sum of BST.cpp"
        "LeetCode/Easy/Range Sum Query - Immutable.cpp"
        "LeetCode/Easy/Rank Transform of an Array.cpp"
        LeetCode/Easy/ransom_note.cpp
        "LeetCode/Easy/Rearrange Spaces Between Words.cpp"
        "LeetCode/Easy/Rectangle Overlap.cpp"
        "LeetCode/Easy/Remove Palindromic Subsequences.cpp"
        "LeetCode/Easy/Remove Vowels from a String.cpp"
        LeetCode/Easy/remove_all_adj_duplicates_in_str.cpp
        LeetCode/Easy/remove_duplicates_sorted_list_1.cpp
        "LeetCode/Easy/Reorder Data in Log Files.cpp"
        "LeetCode/Easy/Replace All ?'s to Avoid Consecutive Repeating Characters.cpp"
        "LeetCode/Easy/Reverse Bits.cpp"
        "LeetCode/Easy/Reverse Only Letters.cpp"
        "LeetCode/Easy/Reverse Prefix of Word.cpp"
        "LeetCode/Easy/Reverse String.cpp"
        "LeetCode/Easy/Reverse Vowels of a String.cpp"
        "LeetCode/Easy/Reverse Words in a String III.cc"
        LeetCode/Easy/reverse_integer.cpp
        LeetCode/Easy/reverse_linked_list.cpp
        "LeetCode/Easy/Robot Bounded In Circle.cpp"
        "LeetCode/Easy/Roman to Integer.cpp"
        "LeetCode/Easy/Rotate String.cpp"
        "LeetCode/Easy/Running Sum of 1d Array.cpp"
        "LeetCode/Easy/Sentence Similarity.cpp"
        "LeetCode/Easy/Set Mismatch.cpp"
        "LeetCode/Easy/Shortest Distance to a Character.cpp"
        "LeetCode/Easy/Shortest Word Distance.cpp"
        "LeetCode/Easy/Shuffle the Array.cpp"
        "LeetCode/Easy/Sign of the Product of an Array.cpp"
        "LeetCode/Easy/Single-Row Keyboard.cpp"
        LeetCode/Easy/slowest_key.cpp
        LeetCode/Easy/sort_array_by_increasing_frequency.cpp
        LeetCode/Easy/spiral_matrix.cpp
        "LeetCode/Easy/Split a String in Balanced Strings.cpp"
        "LeetCode/Easy/Sqrt(x).cpp"
        "LeetCode/Easy/Strobogrammatic Number.cpp"
        "LeetCode/Easy/Subtree of Another Tree.cpp"
        "LeetCode/Easy/Summary Ranges.cpp"
        "LeetCode/Easy/Symmetric Tree.cpp"
        "LeetCode/Easy/The K Weakest Rows in a Matrix.cpp"
        "LeetCode/Easy/Third Maximum Number.cpp"
        "LeetCode/Easy/Toeplitz Matrix.cpp"
        "LeetCode/Easy/Two Sum III - Data structure design.cpp"
        "LeetCode/Easy/Two Sum.cpp"
        LeetCode/Easy/Two_Sum_LessThan_K.cpp
        "LeetCode/Easy/Ugly Number.cpp"
        "LeetCode/Easy/Unique Email Addresses.cpp"
        "LeetCode/Easy/Unique Number of Occurrences.cpp"
        "LeetCode/Easy/Valid Palindrome.cpp"
        "LeetCode/Easy/Valid Word Abbreviation.cpp"
        LeetCode/Easy/valid_anagram.cpp
        LeetCode/Easy/valid_palindrome.cpp
        LeetCode/Easy/valid_palindrome_2.cpp
        LeetCode/Easy/valid_parenthesis.cpp
        "LeetCode/Easy/Verifying an Alien Dictionary.cpp"
        "LeetCode/Easy/Water Bottles.cpp"
        "LeetCode/Easy/X of a Kind in a Deck of Cards.cpp"
        "LeetCode/Hard/24 Game.cpp"
        LeetCode/Hard/alien_dict.cpp
        "LeetCode/Hard/Basic Calculator III.cpp"
        "LeetCode/Hard/Basic Calculator.cpp"
        "LeetCode/Hard/Best Time to Buy and Sell Stock III.cpp"
        "LeetCode/Hard/Best Time to Buy and Sell Stock IV.cpp"
        "LeetCode/Hard/Binary Tree Maximum Path Sum.cpp"
        "LeetCode/Hard/Bus Routes.cpp"
        "LeetCode/Hard/Closest Subsequence Sum.cpp"
        "LeetCode/Hard/Construct Target Array With Multiple Sums.cpp"
        "LeetCode/Hard/Count of Smaller Numbers After Self.cpp"
        "LeetCode/Hard/Course Schedule III.cpp"
        "LeetCode/Hard/Critical Connections in a Network.cpp"
        LeetCode/Hard/decode_ways_2.cpp
        "LeetCode/Hard/Design In-Memory File System.cpp"
        "LeetCode/Hard/Design Search Autocomplete System.cpp"
        "LeetCode/Hard/Dinner Plate Stacks.cpp"
        LeetCode/Hard/dungeon_game.cpp
        "LeetCode/Hard/Employee Free Time.cpp"
        "LeetCode/Hard/Find Median from Data Stream.cpp"
        "LeetCode/Hard/Find Minimum in Rotated Sorted Array II.cpp"
        "LeetCode/Hard/Find XOR Sum of All Pairs Bitwise AND.cpp"
        LeetCode/Hard/find_mountain_arr.cpp
        "LeetCode/Hard/Finding MK Average.cpp"
        LeetCode/Hard/First_Missing_positive.cpp
        "LeetCode/Hard/Guess the Word.cpp"
        "LeetCode/Hard/Integer to English Words.cpp"
        "LeetCode/Hard/Largest Rectangle in Histogram.cpp"
        LeetCode/Hard/LFU_cache.cpp
        "LeetCode/Hard/Longest Increasing Path in a Matrix.cpp"
        "LeetCode/Hard/Longest Valid Parentheses.cpp"
        LeetCode/Hard/longest_consecutive_seq.cpp
        "LeetCode/Hard/Making A Large Island.cpp"
        "LeetCode/Hard/Max Chunks To Make Sorted II.cpp"
        "LeetCode/Hard/Maximal Rectangle.cpp"
        "LeetCode/Hard/Maximize Palindrome Length From Subsequences.cpp"
        "LeetCode/Hard/Maximum Frequency Stack.cpp"
        "LeetCode/Hard/Maximum Number of Ways to Partition an Array.cpp"
        LeetCode/Hard/median_of_two_sorted_arrays.cpp
        LeetCode/Hard/merge_k_lists.cpp
        "LeetCode/Hard/Minimum Moves to Move a Box to Their Target Location.cpp"
        "LeetCode/Hard/Minimum Number of Days to Eat N Oranges.cpp"
        "LeetCode/Hard/Minimum Number of Increments on Subarrays to Form a Target Array.cpp"
        "LeetCode/Hard/Minimum Window Substring.cpp"
        LeetCode/Hard/N-Queens.cpp
        LeetCode/Hard/num_ships_rect.cpp
        "LeetCode/Hard/Number of Submatrices That Sum to Target.cpp"
        "LeetCode/Hard/Number of Unique Good Subsequences.cc"
        "LeetCode/Hard/Permutation Sequence.cpp"
        "LeetCode/Hard/Prefix and Suffix Search.cpp"
        "LeetCode/Hard/Rearrange String k Distance Apart.cpp"
        "LeetCode/Hard/Regular Expression Matching.cpp"
        LeetCode/Hard/remove_invalid_parenthesis.cpp
        "LeetCode/Hard/Reverse Nodes in k-Group.cpp"
        "LeetCode/Hard/Robot Room Cleaner.cpp"
        "LeetCode/Hard/Russian Doll Envelopes.cpp"
        "LeetCode/Hard/Serialize and Deserialize Binary Tree.cpp"
        "LeetCode/Hard/Serialize and Deserialize N-ary Tree.cpp"
        LeetCode/Hard/shortest_palindrome.cpp
        "LeetCode/Hard/Sliding Window Maximum.cc"
        "LeetCode/Hard/Smallest Rectangle Enclosing Black Pixels.cpp"
        "LeetCode/Hard/Sudoku Solver.cpp"
        "LeetCode/Hard/Text Justification.cpp"
        LeetCode/Hard/trapping_rainwater.cpp
        "LeetCode/Hard/Valid Number.cpp"
        "LeetCode/Hard/Vertical Order Traversal of a Binary Tree.cpp"
        "LeetCode/Hard/Word Ladder 2.cpp"
        "LeetCode/Hard/Word Search II.cpp"
        LeetCode/Hard/word_break_2.cpp
        LeetCode/Hard/zuma_game.cpp
        "LeetCode/Medium/ Find Minimum in Rotated Sorted Array.cpp"
        "LeetCode/Medium/ Longest Word in Dictionary through Deleting.cpp"
        "LeetCode/Medium/ Number of Sub-arrays of Size K and Average Greater than or Equal to Threshold.cpp"
        "LeetCode/Medium/ Populating Next Right Pointers in Each Node II.cpp"
        "LeetCode/Medium/ Sort Colors.cpp"
        LeetCode/Medium/132_pattern.cpp
        "LeetCode/Medium/3Sum Smaller.cpp"
        "LeetCode/Medium/3Sum With Multiplicity.cpp"
        LeetCode/Medium/3sum.cpp
        LeetCode/Medium/3Sum_Closest.cpp
        LeetCode/Medium/4Sum.cpp
        LeetCode/Medium/4Sum_2.cpp
        "LeetCode/Medium/Accounts Merge.cpp"
        "LeetCode/Medium/Add Minimum Number of Rungs.cpp"
        "LeetCode/Medium/Add One Row to Tree.cpp"
        "LeetCode/Medium/Add Two Polynomials Represented as Linked Lists.cpp"
        LeetCode/Medium/add_two_nums.cpp
        LeetCode/Medium/add_two_nums2.cpp
        "LeetCode/Medium/Advantage Shuffle.cpp"
        LeetCode/Medium/all_paths_from_source_target.cpp
        "LeetCode/Medium/Angle Between Hands of a Clock.cpp"
        "LeetCode/Medium/Arithmetic Slices.cpp"
        "LeetCode/Medium/Array Nesting.cpp"
        "LeetCode/Medium/Array With Elements Not Equal to Average of Neighbors.cc"
        "LeetCode/Medium/Asteroid Collision.cpp"
        "LeetCode/Medium/Balance a Binary Search Tree.cpp"
        "LeetCode/Medium/Basic Calculator II.cpp"
        "LeetCode/Medium/Beautiful Arrangement II.cpp"
        "LeetCode/Medium/Best Time to Buy and Sell Stock with Transaction Fee.cpp"
        "LeetCode/Medium/Binary Search Tree Iterator II.cpp"
        "LeetCode/Medium/Binary Search Tree Iterator.cpp"
        "LeetCode/Medium/Binary Search Tree to Greater Sum Tree.cpp"
        "LeetCode/Medium/Binary Tree Level Order Traversal II.cpp"
        "LeetCode/Medium/Binary Tree Longest Consecutive Sequence.cpp"
        "LeetCode/Medium/Binary Tree Vertical Order Traversal.cpp"
        "LeetCode/Medium/Binary Tree Zigzag Level Order Traversal.cpp"
        LeetCode/Medium/binary_tree_rightsideview.cpp
        "LeetCode/Medium/Boats to Save People.cpp"
        "LeetCode/Medium/Boundary of Binary Tree.cpp"
        LeetCode/Medium/brace_expansion.cpp
        "LeetCode/Medium/Break a Palindrome.cpp"
        LeetCode/Medium/brick_wall.cpp
        "LeetCode/Medium/Broken Calculator.cpp"
        "LeetCode/Medium/Buildings With an Ocean View.cc"
        "LeetCode/Medium/Bulb Switcher.cpp"
        "LeetCode/Medium/Bulls and Cows.cpp"
        "LeetCode/Medium/Candy Crush.cpp"
        "LeetCode/Medium/Car Fleet.cpp"
        "LeetCode/Medium/Car Pooling.cpp"
        "LeetCode/Medium/Check If a String Contains All Binary Codes of Size K.cpp"
        "LeetCode/Medium/Clone Binary Tree With Random Pointer.cc"
        "LeetCode/Medium/Coin Change 2.cpp"
        "LeetCode/Medium/Coin Change.cpp"
        "LeetCode/Medium/Combination Sum II.cpp"
        "LeetCode/Medium/Combination Sum III.cpp"
        "LeetCode/Medium/Combination Sum IV.cpp"
        "LeetCode/Medium/Combination Sum.cpp"
        "LeetCode/Medium/Compare Version Numbers.cpp"
        "LeetCode/Medium/Construct Binary Tree from String.cpp"
        LeetCode/Medium/construct_bin_tree_preorder_inorder_traversal.cpp
        "LeetCode/Medium/Container With Most Water.cpp"
        "LeetCode/Medium/Continuous Subarray Sum.cpp"
        "LeetCode/Medium/Convert Binary Search Tree to Sorted Doubly Linked List.cpp"
        "LeetCode/Medium/Convert BST to Greater Tree.cpp"
        "LeetCode/Medium/Convert Sorted List to Binary Search Tree.cpp"
        LeetCode/Medium/copy_list_random_pointer.cpp
        "LeetCode/Medium/Count and Say.cpp"
        "LeetCode/Medium/Count Good Meals.cpp"
        "LeetCode/Medium/Count Good Nodes in Binary Tree.cpp"
        "LeetCode/Medium/Count Number of Homogenous Substrings.cpp"
        "LeetCode/Medium/Count Square Submatrices with All Ones.cpp"
        "LeetCode/Medium/Count Unhappy Friends.cpp"
        "LeetCode/Medium/Count Univalue Subtrees.cpp"
        "LeetCode/Medium/Counting Bits.cpp"
        "LeetCode/Medium/Course Schedule II\n.cpp"
        "LeetCode/Medium/Course Schedule.cpp"
        "LeetCode/Medium/Custom Sort String.cpp"
        "LeetCode/Medium/Cutting Ribbons.cpp"
        "LeetCode/Medium/Daily Temperatures.cpp"
        "LeetCode/Medium/Decode String.cpp"
        LeetCode/Medium/decode_ways.cpp
        "LeetCode/Medium/Deepest Leaves Sum.cpp"
        "LeetCode/Medium/Delete Node in a BST.cpp"
        "LeetCode/Medium/Delete Nodes And Return Forest.cpp"
        "LeetCode/Medium/Delete Operation for Two Strings.cpp"
        "LeetCode/Medium/Design Add and Search Words Data Structure.cpp"
        "LeetCode/Medium/Design Bounded Blocking Queue.cpp"
        "LeetCode/Medium/Design Circular Queue.cpp"
        "LeetCode/Medium/Design Hit Counter.cpp"
        "LeetCode/Medium/Design Log Storage System.cpp"
        "LeetCode/Medium/Design Most Recently Used Queue.cpp"
        "LeetCode/Medium/Design Snake Game.cpp"
        "LeetCode/Medium/Design Tic-Tac-Toe.cpp"
        LeetCode/Medium/design_a_leaderboard.cpp
        LeetCode/Medium/design_browser_history.cpp
        LeetCode/Medium/design_ll.cpp
        LeetCode/Medium/Design_stack_with_incr_opr.cpp
        LeetCode/Medium/Design_Twitter.cpp
        LeetCode/Medium/design_underground_system.cpp
        "LeetCode/Medium/Diameter of N-Ary Tree.cpp"
        "LeetCode/Medium/Distribute Coins in Binary Tree.cpp"
        "LeetCode/Medium/Divide Two Integers.cpp"
        "LeetCode/Medium/Dot Product of Two Sparse Vectors.cc"
        LeetCode/Medium/elimination_game.cpp
        LeetCode/Medium/encode_decode_strings.cpp
        "LeetCode/Medium/Evaluate Reverse Polish Notation.cpp"
        "LeetCode/Medium/Evaluate the Bracket Pairs of a String.cpp"
        LeetCode/Medium/evaluate_division.cpp
        "LeetCode/Medium/Find a Corresponding Node of a Binary Tree in a Clone of That Tree.cpp"
        "LeetCode/Medium/Find a Peak Element II.cpp"
        "LeetCode/Medium/Find All Anagrams in a String.cc"
        "LeetCode/Medium/Find All Duplicates in an Array.cpp"
        "LeetCode/Medium/Find And Replace in String.cpp"
        "LeetCode/Medium/Find First and Last Position of Element in Sorted Array.cpp"
        "LeetCode/Medium/Find K Closest Elements.cpp"
        "LeetCode/Medium/Find K Pairs with Smallest Sums.cpp"
        "LeetCode/Medium/Find Missing Observations.cpp"
        "LeetCode/Medium/Find Peak Element.cpp"
        "LeetCode/Medium/Find Right Interval.cpp"
        "LeetCode/Medium/Find Smallest Common Element in All Rows.cpp"
        "LeetCode/Medium/Find the Celebrity.cpp"
        "LeetCode/Medium/Find the Duplicate Number.cpp"
        "LeetCode/Medium/Find the Winner of the Circular Game.cpp"
        LeetCode/Medium/first_unique_number.cpp
        "LeetCode/Medium/Flatten 2D Vector.cpp"
        "LeetCode/Medium/Flatten Binary Tree to Linked List.cpp"
        "LeetCode/Medium/Flatten Nested List Iterator.cpp"
        LeetCode/Medium/flatten_multilvl_doubly_linkedlist.cpp
        "LeetCode/Medium/Flip Binary Tree To Match Preorder Traversal.cpp"
        "LeetCode/Medium/Flip Equivalent Binary Trees.cpp"
        "LeetCode/Medium/Fraction to Recurring Decimal.cpp"
        "LeetCode/Medium/Furthest Building You Can Reach.cpp"
        "LeetCode/Medium/Game of Life.cpp"
        "LeetCode/Medium/Gas Station.cpp"
        "LeetCode/Medium/Generate Parentheses.cpp"
        "LeetCode/Medium/Generate Random Point in a Circle.cpp"
        "LeetCode/Medium/Global and Local Inversions.cpp"
        "LeetCode/Medium/Graph Valid Tree.cpp"
        "LeetCode/Medium/Group Shifted Strings.cpp"
        LeetCode/Medium/group_anagrams.cpp
        LeetCode/Medium/h_index.cpp
        "LeetCode/Medium/House Robber II.cpp"
        "LeetCode/Medium/House Robber III.cc"
        "LeetCode/Medium/House Robber.cpp"
        "LeetCode/Medium/Implement Trie (Prefix Tree).cc"
        "LeetCode/Medium/Increasing Triplet Subsequence.cc"
        "LeetCode/Medium/Inorder Successor in BST II.cpp"
        "LeetCode/Medium/Inorder Successor in BST.cpp"
        "LeetCode/Medium/Insert Interval.cpp"
        "LeetCode/Medium/Insert into a Binary Search Tree.cpp"
        "LeetCode/Medium/Insert into a Sorted Circular Linked List.cpp"
        "LeetCode/Medium/insert_delete_getRandom_O(1).cpp"
        LeetCode/Medium/insert_into_cyclic_sorted_list.cpp
        LeetCode/Medium/Integer_to_roman.cpp
        "LeetCode/Medium/Interleaving String.cpp"
        "LeetCode/Medium/Interval List Intersections.cpp"
        LeetCode/Medium/invalid_transactions.cpp
        "LeetCode/Medium/Is Graph Bipartite?.cpp"
        LeetCode/Medium/Jump_Game.cpp
        LeetCode/Medium/Jump_Game2.cpp
        LeetCode/Medium/Jump_Game3.cpp
        "LeetCode/Medium/K Closest Points to Origin.cpp"
        "LeetCode/Medium/K-diff Pairs in an Array.cc"
        "LeetCode/Medium/Keys and Rooms.cpp"
        "LeetCode/Medium/Kill Process.cpp"
        "LeetCode/Medium/Koko Eating Bananas.cpp"
        "LeetCode/Medium/Kth Smallest Element in a BST.cpp"
        "LeetCode/Medium/Kth Smallest Element in a Sorted Matrix.cpp"
        LeetCode/Medium/kth_largest_element.cpp
        "LeetCode/Medium/Largest BST Subtree.cpp"
        "LeetCode/Medium/Largest Merge Of Two Strings.cpp"
        "LeetCode/Medium/Largest Number.cpp"
        "LeetCode/Medium/Leftmost Column with at Least a One.cc"
        "LeetCode/Medium/Letter Combinations of a Phone Number.cpp"
        LeetCode/Medium/letter_case_permutations.cpp
        "LeetCode/Medium/Linked List Cycle.cpp"
        LeetCode/Medium/ll_cycle_2.cpp
        "LeetCode/Medium/Longest Happy String.cpp"
        "LeetCode/Medium/Longest Increasing Subsequence.cpp"
        "LeetCode/Medium/Longest String Chain.cpp"
        "LeetCode/Medium/Longest Substring with At Least K Repeating Characters.cpp"
        "LeetCode/Medium/Longest Substring with At Most K Distinct Characters .cpp"
        "LeetCode/Medium/Longest Univalue Path.cpp"
        LeetCode/Medium/longest_palindromic_substr.cpp
        LeetCode/Medium/longest_substr_wo_rep_char.cpp
        "LeetCode/Medium/Lowest Common Ancestor of a Binary Search Tree.cpp"
        "LeetCode/Medium/Lowest Common Ancestor of a Binary Tree II.cpp"
        "LeetCode/Medium/Lowest Common Ancestor of a Binary Tree III.cpp"
        "LeetCode/Medium/Lowest Common Ancestor of a Binary Tree IV.cpp"
        "LeetCode/Medium/Lowest Common Ancestor of a Binary Tree.cpp"
        LeetCode/Medium/lru.cpp
        "LeetCode/Medium/Making File Names Unique.cc"
        "LeetCode/Medium/Max Area of Island.cpp"
        "LeetCode/Medium/Max Chunks To Make Sorted.cpp"
        "LeetCode/Medium/Max Number of K-Sum Pairs.cpp"
        "LeetCode/Medium/Maximal Network Rank.cpp"
        "LeetCode/Medium/Maximal Square.cpp"
        "LeetCode/Medium/Maximize the Confusion of an Exam.cpp"
        "LeetCode/Medium/Maximum Average Subtree.cpp"
        "LeetCode/Medium/Maximum Erasure Value.cpp"
        "LeetCode/Medium/Maximum Ice Cream Bars.cpp"
        "LeetCode/Medium/Maximum Length of a Concatenated String with Unique Characters.cpp"
        "LeetCode/Medium/Maximum Length of Repeated Subarray.cpp"
        "LeetCode/Medium/Maximum Number of Eaten Apples.cpp"
        "LeetCode/Medium/Maximum Points You Can Obtain from Cards.cpp"
        "LeetCode/Medium/Maximum Product of the Length of Two Palindromic Subsequences.cpp"
        "LeetCode/Medium/Maximum Score from Performing Multiplication Operations.cpp"
        "LeetCode/Medium/Maximum Score From Removing Stones.cpp"
        "LeetCode/Medium/Maximum Swap.cpp"
        LeetCode/Medium/Maximum_product_subarray.cpp
        LeetCode/Medium/meeting_rooms_2.cpp
        LeetCode/Medium/merge_intervals.cpp
        LeetCode/Medium/min_no_steps_2_strings_anagram.cpp
        "LeetCode/Medium/Mini Parser.cpp"
        "LeetCode/Medium/Minimum Add to Make Parentheses Valid.cc"
        "LeetCode/Medium/Minimum Cost For Tickets.cpp"
        "LeetCode/Medium/Minimum Cost to Connect Sticks.cpp"
        "LeetCode/Medium/Minimum Deletion Cost to Avoid Repeating Letters.cpp"
        "LeetCode/Medium/Minimum Deletions to Make Character Frequencies Unique.cpp"
        "LeetCode/Medium/Minimum Difference Between Largest and Smallest Value in Three Moves.cpp"
        "LeetCode/Medium/Minimum Elements to Add to Form a Given Sum.cpp"
        "LeetCode/Medium/Minimum Genetic Mutation.cpp"
        "LeetCode/Medium/Minimum Moves to Equal Array Elements II.cpp"
        "LeetCode/Medium/Minimum Number of Arrows to Burst Balloons.cpp"
        "LeetCode/Medium/Minimum Number of Operations to Move All Balls to Each Box.cpp"
        "LeetCode/Medium/Minimum Number of Operations to Reinitialize a Permutation.cpp"
        "LeetCode/Medium/Minimum Number of Work Sessions to Finish the Tasks.cc"
        "LeetCode/Medium/Minimum Operations to Make Array Equal.cpp"
        "LeetCode/Medium/Minimum Path Sum.cpp"
        "LeetCode/Medium/Minimum Remove to Make Valid Parentheses.cpp"
        "LeetCode/Medium/Minimum Sideway Jumps.cpp"
        "LeetCode/Medium/Minimum Size Subarray Sum.cpp"
        "LeetCode/Medium/Minimum Swaps to Group All 1's Together.cpp"
        "LeetCode/Medium/Missing Element in Sorted Array.cpp"
        "LeetCode/Medium/Most Frequent Subtree Sum.cpp"
        LeetCode/Medium/multiply_strings.cpp
        "LeetCode/Medium/My Calendar I.cpp"
        "LeetCode/Medium/N-ary Tree Level Order Traversal.cpp"
        "LeetCode/Medium/Nested List Weight Sum II.cpp"
        "LeetCode/Medium/Nested List Weight Sum.cpp"
        "LeetCode/Medium/New 21 Game.cpp"
        "LeetCode/Medium/Next Permutation.cpp"
        "LeetCode/Medium/Non-decreasing Array.cpp"
        "LeetCode/Medium/Non-overlapping Intervals.cpp"
        LeetCode/Medium/num_of_islands.cpp
        "LeetCode/Medium/Number of Closed Islands.cpp"
        "LeetCode/Medium/Number of Connected Components in an Undirected Graph.cpp"
        "LeetCode/Medium/Number of Distinct Islands.cpp"
        "LeetCode/Medium/Number of Enclaves.cpp"
        "LeetCode/Medium/Number of Good Ways to Split a String.cpp"
        "LeetCode/Medium/Number of Matching Subsequences.cpp"
        "LeetCode/Medium/Number of Orders in the Backlog.cpp"
        "LeetCode/Medium/Number of Pairs of Interchangeable Rectangles.cpp"
        "LeetCode/Medium/Number of Pairs of Strings With Concatenation Equal to Target.cpp"
        "LeetCode/Medium/Number of Provinces.cpp"
        "LeetCode/Medium/Number of Restricted Paths From First to Last Node.cpp"
        LeetCode/Medium/odd_even_ll.cpp
        "LeetCode/Medium/One Edit Distance.cpp"
        "LeetCode/Medium/Ones and Zeroes.cpp"
        "LeetCode/Medium/Open the Lock.cpp"
        "LeetCode/Medium/Pacific Atlantic Water Flow.cpp"
        "LeetCode/Medium/Paint House.cpp"
        "LeetCode/Medium/Palindrome Partitioning.cpp"
        "LeetCode/Medium/Palindromic Substrings.cpp"
        "LeetCode/Medium/Parallel Courses.cpp"
        "LeetCode/Medium/Partition Array into Disjoint Intervals.cpp"
        "LeetCode/Medium/Partition Equal Subset Sum.cpp"
        "LeetCode/Medium/Partition Labels.cpp"
        "LeetCode/Medium/Partition List.cpp"
        "LeetCode/Medium/Path Sum II.cpp"
        "LeetCode/Medium/Path Sum III.cc"
        "LeetCode/Medium/Peeking Iterator.cpp"
        "LeetCode/Medium/Perfect Squares.cc"
        "LeetCode/Medium/Permutations II.cpp"
        LeetCode/Medium/Permutations.cpp
        "LeetCode/Medium/Populating Next Right Pointers in Each Node.cpp"
        "LeetCode/Medium/Possible Bipartition.cpp"
        "LeetCode/Medium/Pow(x, n).cpp"
        "LeetCode/Medium/Previous Permutation With One Swap.cpp"
        "LeetCode/Medium/Prison Cells After N Days.cpp"
        "LeetCode/Medium/Product of Array Except Self.cpp"
        "LeetCode/Medium/Product of Two Run-Length Encoded Arrays.cpp"
        "LeetCode/Medium/Random Pick Index.cpp"
        "LeetCode/Medium/Random Pick with Weight.cpp"
        "LeetCode/Medium/Reconstruct Original Digits from English.cpp"
        LeetCode/Medium/reconstruct_itinerary.cpp
        "LeetCode/Medium/Recover Binary Search Tree.cpp"
        "LeetCode/Medium/Reduce Array Size to The Half.cpp"
        "LeetCode/Medium/Redundant Connection.cpp"
        "LeetCode/Medium/Remove Comments.cpp"
        "LeetCode/Medium/Remove Duplicate Letters.cpp"
        "LeetCode/Medium/Remove Duplicates From an Unsorted Linked List.cpp"
        "LeetCode/Medium/Remove Zero Sum Consecutive Nodes from Linked List.cpp"
        LeetCode/Medium/remove_all_adj_duplicates_in_str_2.cpp
        LeetCode/Medium/remove_duplicates_sorted_list_2.cpp
        LeetCode/Medium/remove_k_digits.cpp
        LeetCode/Medium/remove_nth_node_from_end_of_list.cpp
        "LeetCode/Medium/Reorganize String.cpp"
        "LeetCode/Medium/Restore IP Addresses.cpp"
        "LeetCode/Medium/Reverse Words in a String II.cpp"
        "LeetCode/Medium/Reverse Words in a String.cpp"
        LeetCode/Medium/reverse_linked_list_2.cpp
        "LeetCode/Medium/RLE Iterator.cpp"
        "LeetCode/Medium/Rotate Array.cpp"
        "LeetCode/Medium/Rotate Image.cpp"
        LeetCode/Medium/rotate_list.cpp
        "LeetCode/Medium/Rotting Oranges.cpp"
        "LeetCode/Medium/Score of Parentheses.cpp"
        "LeetCode/Medium/Search a 2D Matrix II.cpp"
        "LeetCode/Medium/Search a 2D Matrix.cpp"
        "LeetCode/Medium/Search in a Sorted Array of Unknown Size.cpp"
        "LeetCode/Medium/Search in Rotated Sorted Array II.cpp"
        LeetCode/Medium/search_in_rotated_sorted_array.cpp
        "LeetCode/Medium/Sentence Similarity II.cpp"
        "LeetCode/Medium/Set Matrix Zeroes.cpp"
        "LeetCode/Medium/Shifting Letters.cpp"
        "LeetCode/Medium/Short Encoding of Words.cpp"
        "LeetCode/Medium/Shortest Bridge.cpp"
        "LeetCode/Medium/Shortest Path in Binary Matrix.cpp"
        "LeetCode/Medium/Shortest Path to Get Food.cpp"
        "LeetCode/Medium/Shortest Unsorted Continuous Subarray.cpp"
        "LeetCode/Medium/Simplify Path.cpp"
        "LeetCode/Medium/Single Element in a Sorted Array.cpp"
        "LeetCode/Medium/Single-Threaded CPU.cpp"
        "LeetCode/Medium/Smallest Common Region.cpp"
        "LeetCode/Medium/Snapshot Array.cpp"
        "LeetCode/Medium/Sort Features by Popularity.cpp"
        "LeetCode/Medium/Sort List.cc"
        LeetCode/Medium/sort_char_by_freq.cpp
        "LeetCode/Medium/Spiral Matrix II.cpp"
        "LeetCode/Medium/Split Array into Consecutive Subsequences.cpp"
        "LeetCode/Medium/Split Linked List in Parts.cpp"
        "LeetCode/Medium/Squirrel Simulation.cpp"
        "LeetCode/Medium/String to Integer (atoi).cpp"
        "LeetCode/Medium/String Without AAA or BBB.cpp"
        LeetCode/Medium/string_compression.cpp
        LeetCode/Medium/subarray_sum_k.cpp
        LeetCode/Medium/subsets.cpp
        LeetCode/Medium/subsets2.cpp
        "LeetCode/Medium/Sum of Nodes with Even-Valued Grandparent.cpp"
        "LeetCode/Medium/Sum Root to Leaf Numbers.cpp"
        LeetCode/Medium/sum_of_mutated_arr_closest_target.cpp
        LeetCode/Medium/sum_of_two_integers.cpp
        "LeetCode/Medium/Surrounded Regions.cpp"
        "LeetCode/Medium/Swap Nodes in Pairs.cpp"
        "LeetCode/Medium/Swapping Nodes in a Linked List.cpp"
        "LeetCode/Medium/Target Sum.cpp"
        "LeetCode/Medium/Task Scheduler.cpp"
        "LeetCode/Medium/The Maze.cpp"
        "LeetCode/Medium/Time Based Key-Value Store.cpp"
        "LeetCode/Medium/Time Needed to Inform All Employees.cpp"
        "LeetCode/Medium/Top K Frequent Words.cpp"
        LeetCode/Medium/top_k_freq_ele.cpp
        LeetCode/Medium/triangle.cpp
        "LeetCode/Medium/Trim a Binary Search Tree.cpp"
        LeetCode/Medium/tuple_with_same_product.cpp
        "LeetCode/Medium/Tweet Counts Per Frequency.cpp"
        "LeetCode/Medium/Two Sum BSTs.cpp"
        LeetCode/Medium/two_city_scheduling.cpp
        "LeetCode/Medium/Unique Binary Search Trees II.cc"
        "LeetCode/Medium/Unique Binary Search Trees.cpp"
        "LeetCode/Medium/Unique Paths II.cpp"
        "LeetCode/Medium/Unique Paths.cpp"
        "LeetCode/Medium/Valid Square.cpp"
        "LeetCode/Medium/Valid Sudoku.cpp"
        LeetCode/Medium/valid_triangle_num.cpp
        "LeetCode/Medium/Validate Binary Search Tree.cpp"
        "LeetCode/Medium/Validate IP Address.cpp"
        "LeetCode/Medium/Validate Stack Sequences.cpp"
        "LeetCode/Medium/Video Stitching.cpp"
        "LeetCode/Medium/Vowel Spellchecker.cpp"
        "LeetCode/Medium/Walls and Gates.cpp"
        "LeetCode/Medium/Wiggle Subsequence.cpp"
        "LeetCode/Medium/Wildcard Matching.cpp"
        "LeetCode/Medium/Word Ladder.cpp"
        "LeetCode/Medium/Word Subsets  Solution.cpp"
        LeetCode/Medium/word_search.cpp
        "LeetCode/Medium/Zigzag Iterator.cpp"
        "MIT/6.006/1-Peak Finding/peak_finder.cpp"
        OOD/Deck_of_cards.cpp
        OOD/inheritence.cpp
        OS/common.h
        OS/cpu.c
        OS/exec.c
        OS/fork.c
        OS/IO.c
        OS/mem.c
        OS/rocket.cpp
        OS/sync.cpp
        OS/thread.c
        OS/thread.cc
        hello.cpp
        stdc++.h
        test.cpp)
